ADDED: 1st e2e test
